# TradingAgents

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
agents/: config.py  main.py  orchestrator.py  pyproject.toml  requirements.txt
agents/agents/: __init__.py  base.py  chip_analyst.py  fundamental_analyst.py  models.py  news_analyst.py  researcher.py  risk_manager.py  sentiment_analyst.py  technical_analyst.py  trader.py
agents/backtest/: runner.py  strategy.py
agents/llm/: __init__.py  base.py  claude.py  factory.py  gemini.py  openai_provider.py
agents/prompts/: chip.txt  fundamental.txt  news.txt  researcher_bear.txt  researcher_bull.txt  researcher_facilitator.txt  risk_aggressive.txt  risk_conservative.txt  risk_fund_manager.txt  sentiment.txt  technical.txt  trader.txt
agents/tools/: db.py  finmind.py  formatter.py  indicators.py
data-collector/: go.mod  go.sum
data-collector/cmd/: main.go
data-collector/internal/config/: config.go
data-collector/internal/db/: db.go
data-collector/internal/finmind/: client.go
data-collector/internal/models/: models.go
data-collector/internal/news/: crawler.go
data-collector/internal/ptt/: crawler.go
data-collector/internal/redis/: publisher.go
data-collector/internal/scheduler/: scheduler.go
scripts/: add_financial_tables.sql  backtest.py  init_db.sql
