[project]
name = "tradingagents-tw"
version = "0.1.0"
description = "台股多代理人 LLM 選股系統"
requires-python = ">=3.12"
dependencies = [
    # LLM providers
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "openai>=1.50.0",
    "instructor>=1.4.0",
    # Validation & settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Redis
    "redis>=5.0.0",
    # Technical analysis
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b0",
    "numpy>=1.26.0",
    # HTTP
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    # Resilience & logging
    "tenacity>=8.0.0",
    "structlog>=24.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    # Backtest
    "backtrader>=1.9.78.123",
    "matplotlib>=3.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ipython>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
